--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Baxthus API</title>
+    <!--suppress JSUnresolvedLibraryURL -->
     <link rel="stylesheet" href="https://tilde.team/css/hacker.css" />
     <link rel="icon" href="https://abysmal.eu.org/favicon.ico" type="image/x-icon" />
 </head>
-<body>
+<body class="text-center">
     <h1>Baxthus API</h1>
 
     <h3><a onclick="window.location = '//abysmal.eu.org'" style="cursor: pointer">Home</a></h3>
